feat: added new challenge and minor changes